--- a/lesson24_homework_html/src/main/webapp/login.html
+++ b/lesson24_homework_html/src/main/webapp/login.html
@@ -3,11 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>login</title>
-    <link  href="login.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
 <div class="parentDiv">
-    <div class="LoginForm">
+    <div class="LoginPasswordForm">
+        <form method="post" action="http://127.0.0.1:8080/lesson24homework/login">
+            <div class="loginDiv">
+                <div class="loginDivTop">
+                    <label>Login</label>
+                </div>
+                <div class="loginDivBottom">
+                    <input type="text" name="login">
+                </div>
+            </div>
+            <div class="passwordDiv">
+                <div class="passwordDivTop">
+                    <label>Password</label>
+                </div>
+                <div class="passwordDivBottom">
+                    <input type="text" name="password">
+                </div>
+            </div>
+            <div class="buttonDiv">
+                <button type="submit">Send</button>
+            </div>
+
+        </form>
 
     </div>
 
