Lesson 24 homework html css

--- a/lesson24_homework_html/src/main/webapp/login.html
+++ b/lesson24_homework_html/src/main/webapp/login.html
@@ -26,11 +26,14 @@
                 </div>
             </div>
             <div class="buttonDiv">
-                <button type="submit">Send</button>
+                <button type="submit">Sigh in</button>
             </div>
-
         </form>
-
+        <!--
+        <div class="buttonDiv" id="registrationButton">
+            <button onClick="window.location.href='http://127.0.0.1:8080/lesson24homework/registration.html';" >Registration new user</button>
+        </div>
+        -->
     </div>
 
 </div>
