--- a/lesson24_homework_html/src/main/webapp/registration.html
+++ b/lesson24_homework_html/src/main/webapp/registration.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>Registration</title>
 </head>
 <body>
-Test Html page
+
 </body>
 </html>
