--- a/lesson24_homework_html/src/main/webapp/picture.html
+++ b/lesson24_homework_html/src/main/webapp/picture.html
@@ -9,6 +9,7 @@
     <div class="parentDiv">
         <div class="navigationDiv">
             <button onClick="window.location.href='http://127.0.0.1:8080/lesson24homework/login.html';" >Back to login page</button>
+            <a href="image">click for photo</a>
         </div>
     </div>
 </body>
