Lesson 24 homework html css js added parse json object Added JS table

--- a/lesson24_homework_html/src/main/webapp/allusers.html
+++ b/lesson24_homework_html/src/main/webapp/allusers.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<input type="button" value="Back to add user" onclick="window.location.href='http://127.0.0.1:8080/lesson24homework/registration.html';">
 <script src="allusers.js"></script>
 </body>
 </html>
