--- a/lesson24_homework_html/src/main/webapp/registration.html
+++ b/lesson24_homework_html/src/main/webapp/registration.html
@@ -9,7 +9,7 @@
 <div class="parentDiv">
     <div class="formDiv">
         <div class="conditionDiv" id="topDiv">
-            <label id="topLabel"> Enter characteristic new user:</label>
+            <label id="topLabel"> Enter characteristic new userMy:</label>
         </div>
 
         <form method="post" action="http://127.0.0.1:8080/lesson24homework/registration">
@@ -34,7 +34,7 @@
                 <input type="text" name="role">
             </div>
             <div class="buttonDiv">
-                <button type="submit">Create new user</button>
+                <button type="submit">Create new userMy</button>
             </div>
         </form>
 
