--- a/lesson25_homework_bootstrap/src/main/webapp/registration.html
+++ b/lesson25_homework_bootstrap/src/main/webapp/registration.html
@@ -11,7 +11,7 @@
     <div class="row">
         <div class="col-4">
             <form method="post" action="http://127.0.0.1:8080/lesson25homework/registration">
-                <label id="topLabel">Enter characteristic new user</label>
+                <label id="topLabel">Enter characteristic new userMy</label>
                 <div class="inputDiv">
                     <label for="inputLogin">Login</label>
                     <input type="text" class="text" id="inputLogin"name="login">
